# Insuracle

./: LICENSE  ORACLE_EXPLANATION.md  ORACLE_INTEGRATION_GUIDE.md  README.md  investigate-oracle.js  package-lock.json  package.json  test-contract-connection.js  test-new-contract.js
frontend/: index.html  package-lock.json  package.json
frontend/public/: insuracle_abi.json
frontend/src/: App.jsx  InsuracleDashboard.tsx  InsuracleDashboardAdmin.tsx
frontend/src/lib/: contract.ts  mockOracleAbi.ts
frontend/src/pages/: Index.tsx
insuracle/: Cargo.toml  lib.rs
oracle-updater/: README.md  REAL_DATA_EXPLANATION.md  TWO_CONTRACTS_EXPLAINED.md  code-breakdown.js  index.js  manual-test.js  oracle-monitor.js  package-lock.json  package.json  quick-status.js  simple-test.js  test-connection.js  test-data-sources.js  test-fix.js  test-live-update.js  test-usgs-api.js  verify-data-source.js
scripts/: deploy.js  deployMock.js  fix-oracle-connection.js  fund-contract.js
